objects/Case.object
<CustomObject>
    <fields>
        <fullName>DevelopmentSystem__c</fullName>
        <description>SFDC1-251 This field contains the reference to the development system associated with the case.</description>
        <inlineHelpText>Please populate the development system associated with this case.</inlineHelpText>
        <label>Development System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADO</fullName>
                </value>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>WRIKE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DevelopmentTicketURL__c</fullName>
        <description>SFDC-3558: To log the HTML reference to the external development system</description>
        <label>Development Ticket URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DoNotNotifyReason__c</fullName>
        <description>SFDC1-8914 Specify the reason why we should not send notification emails to the Case&apos;s Contact upon case open, close, reopen, etc...</description>
        <inlineHelpText>Specify the reason why we should not send notification emails to the Case&apos;s Contact upon case open, close, reopen, etc...</inlineHelpText>
        <label>Do Not Notify Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotNotify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8914: if &quot;Do Not Notify&quot; is set for a certain case, no case open, close, reopen, etc. emails should be sent to the Case Contact.</description>
        <inlineHelpText>If this box is checked, no communication emails will be sent to the Case&apos;s Contact.</inlineHelpText>
        <label>Do Not Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotSurveyReason__c</fullName>
        <description>SFDC1-251 Free form text that is required to be populated when the Do Not Survey checkbox is ticked.</description>
        <label>Do Not Survey Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-251 Checkbox that notifies that the contact will not be surveyed upon case completion.</description>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doc__c</fullName>
        <description>SFDC1-6995 Used for all RETAIL inquiries to determine the exact document number</description>
        <label>Doc #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedResponseDate__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Expected Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <description>SFDC1-593 This is expected Annualized 1st Year Revenue from the list of Opportunities</description>
        <label>Expected Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalEmailforContact__c</fullName>
        <description>SFDC-4579 Response Management Team Enhancements - Part 2
Using in workflow rule for the field update.</description>
        <label>External Email for Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalEmailforWeb__c</fullName>
        <description>SFDC-4579 Response Management Team Enhancements - Part 2
Using in workflow rule for the field update.</description>
        <label>External Email for Web</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalOrgType__c</fullName>
        <description>SFDC-2810 To Update &quot;New Account Request Forms&apos;</description>
        <inlineHelpText>External Org Type required for new Account creation through Case</inlineHelpText>
        <label>External Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ExternalOrgType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEDOrderInvoice__c</fullName>
        <description>SFDC1-6995 Used for RETAIL orders out of the GED to provide either the order or invoice number</description>
        <label>GED Order/Invoice #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAlliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-846: Earlier this field used to be Channel/Partner
SFDC1-10675:Change filter value from &quot;Global Alliance&quot; to &quot;Channel Partner&quot;</description>
        <inlineHelpText>This used to be Channel Partner</inlineHelpText>
        <label>Global Alliance</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected account is not a Channel Partner.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Global Alliance)</relationshipLabel>
        <relationshipName>GlobalAllianceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupDesk__c</fullName>
        <description>SFDC-5338 : the field Group/Desk is mandatory for creating Contact.</description>
        <inlineHelpText>Subsection of the company as indicated by industry expertise, experience, qualifications and/or skillset of the individual</inlineHelpText>
        <label>Group/Desk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Algorithm</fullName>
                </value>
                <value>
                    <fullName>Alternative Investments</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Arbitrage</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Artificial Inteligence</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Blockchain</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Development/Sales</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Clearing</fullName>
                </value>
                <value>
                    <fullName>Clearing/Back Office</fullName>
                </value>
                <value>
                    <fullName>Clearing &amp; Custody</fullName>
                </value>
                <value>
                    <fullName>Commodities Desk</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Convertible Desk</fullName>
                </value>
                <value>
                    <fullName>Corporate Broking</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRBusinessUnit__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>HR Business Unit</inlineHelpText>
        <label>HR Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasDeletedDuplicatedByCurrentUser__c</fullName>
        <description>SFDC1-5934, used to build List views on cases. My Deleted/Duplicated Cases</description>
        <formula>$User.Id =  PreviousOwnerUser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Deleted/Duplicated By Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IHSMarkitLegalEntityNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>IHS Markit Legal Entity</inlineHelpText>
        <label>IHS Markit Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IHSMarkitUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: IHS Markit User field holds user reference</description>
        <label>IHS Markit User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImplementationStage__c</fullName>
        <description>SFDC-4800 field created to assist with Kanban for GRRS Onboarding Team</description>
        <label>Implementation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-NotSigned</fullName>
                </value>
                <value>
                    <fullName>1-Signed</fullName>
                </value>
                <value>
                    <fullName>2-Grooming</fullName>
                </value>
                <value>
                    <fullName>3-Onboarding Ready</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>4-Business Analysis</fullName>
                </value>
                <value>
                    <fullName>5-Development</fullName>
                </value>
                <value>
                    <fullName>6-UAT</fullName>
                </value>
                <value>
                    <fullName>7-Onboarding Complete</fullName>
                </value>
                <value>
                    <fullName>8-Warranty</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstitutionSubType__c</fullName>
        <description>SFDC-2810 To Update &quot;New Account Request Forms&apos;</description>
        <inlineHelpText>For new Account creation through Case</inlineHelpText>
        <label>Institution Sub Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>InstitutionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>InstitutionSubType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstitutionType__c</fullName>
        <description>SFDC1-10484 this is used on Account Request form</description>
        <inlineHelpText>Institution Type required for new Account creation through Case</inlineHelpText>
        <label>Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ExternalOrgType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>InstitutionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalEmailforContact__c</fullName>
        <description>SFDC-4579 Response Management Team Enhancements - Part 2
Using in workflow rule for the field update.</description>
        <label>Internal Email for Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InternalEmailforWeb__c</fullName>
        <description>SFDC-4579 Response Management Team Enhancements - Part 2
Using in workflow rule for the field update.</description>
        <label>Internal Email for Web</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsACFValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9276 : This field will be used to validate ACF before we close the Case</description>
        <inlineHelpText>This field will be used to validate ACF before we close the Case.</inlineHelpText>
        <label>Is ACF Validated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <description>SFDC1-8198 -FLAG for Case Record Types to Support Internal/External Type Concept. SFDC1-9677: Replacing Sales Support with Sales Operations</description>
        <formula>IF(
   OR(
     RecordType.DeveloperName  = &apos;SalesforceHelpdesk&apos;, 
     RecordType.DeveloperName  = &apos;SalesOperations&apos;, 
     RecordType.DeveloperName  = &apos;OrderManagement&apos;,
     RecordType.DeveloperName  = &apos;OrderManagementDeliveryHelpDesk&apos;, 
     RecordType.DeveloperName  = &apos;GDSA&apos;, 
     RecordType.DeveloperName  = &apos;JoinerTransferLeaver&apos;,
     RecordType.DeveloperName  = &apos;ContractManagement&apos;,
     RecordType.DeveloperName  = &apos;SalesSupport&apos;
     ), 
     true,false
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field indicates whether the case record type is an internal versus external case record type.</inlineHelpText>
        <label>IsInternal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <description>SFDC-5338 : the field Job Function is mandatory while creating Contact.</description>
        <inlineHelpText>Subsection of the company as indicated by responsibilities/activities undertaken by the individual.</inlineHelpText>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Broking</fullName>
                </value>
                <value>
                    <fullName>Business Development/Sales</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>C-Suite Executives</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Economist</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental Health Safety Sustainability</fullName>
                </value>
                <value>
                    <fullName>Exploration &amp; Production</fullName>
                </value>
                <value>
                    <fullName>Financial/Investment</fullName>
                </value>
                <value>
                    <fullName>Geology</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <description>SFDC-5338 : the field Job Title is mandatory for creating Contact.</description>
        <inlineHelpText>Industry specific job level in organization.</inlineHelpText>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant Vice President</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>CCO - Chief Compliance Officer</fullName>
                </value>
                <value>
                    <fullName>CDO - Chief Data Officer</fullName>
                </value>
                <value>
                    <fullName>CDO - Chief Diversity Officer</fullName>
                </value>
                <value>
                    <fullName>CEO - Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>CFO - Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Analyst</fullName>
                </value>
                <value>
                    <fullName>Chief Engineering</fullName>
                </value>
                <value>
                    <fullName>CIO - Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>CIO - Chief Innovation Officer</fullName>
                </value>
                <value>
                    <fullName>CIO - Chief Investment Officer</fullName>
                </value>
                <value>
                    <fullName>C Level (undefined)</fullName>
                </value>
                <value>
                    <fullName>CLO - Chief Legal Officer</fullName>
                </value>
                <value>
                    <fullName>CMO - Chief Marketing Officer</fullName>
                </value>
                <value>
                    <fullName>COO - Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>CRO - Chief Revenue Officer</fullName>
                </value>
                <value>
                    <fullName>CRO - Chief Risk Officer</fullName>
                </value>
                <value>
                    <fullName>CSO - Chief Security Officer</fullName>
                </value>
                <value>
                    <fullName>CSO - Chief Strategy Officer</fullName>
                </value>
                <value>
                    <fullName>CTO - Chief Technology Officer</fullName>
                </value>
                <value>
                    <fullName>CXO - Chief Experience Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive Board Member</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastACFModifiedDate__c</fullName>
        <description>SFDC1-5513: Workflow rule will populate this field if certain conditions satisfy and ACF gets modified. So that when Last Modified Date for a case gets changed, and the time based workflow trigger will re-trigger.</description>
        <inlineHelpText>Last Additional Case Fields modified Date</inlineHelpText>
        <label>LastACFModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateForRelatedData__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>SFDC-3511 .To Store Last Modified Date for Related Data  such as Case Comments , Email Message etc.</description>
        <label>Last Modified Date For Related Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastOIDOutage__c</fullName>
        <description>SFDC1-251 Date field for the last recorded OID Outage</description>
        <label>Last OID Outage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestCaseCommentDate__c</fullName>
        <description>SFDC1-6294
Contains the latest case comment date.</description>
        <label>Latest Case Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to leads</description>
        <inlineHelpText>This value will be populated when the ticket is spawned from a Lead Record</inlineHelpText>
        <label>Lead Reference</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>LeadReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadToCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-1363 Lead to Customer Care Case</description>
        <label>LeadToCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System ID referencing the source record Populated at Migration</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>System reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyThreadId__c</fullName>
        <description>Field to store thread id of legacy markit cases.</description>
        <label>LegacyThreadId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinktoRedirecttoOtherSite__c</fullName>
        <description>SFDC1-6647, To review status or submit a Company Missing or Update requests Link</description>
        <formula>HYPERLINK(&quot;http://workspace.ihs.com/sites/sales/energyww/Pricing/AccountPlacements/default.aspx&quot;, &quot;Pricing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Redirect to Other Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupName__c</fullName>
        <description>SFDC1-6250 Dependent picklist (controlling field is &quot;DeliveryTeam&quot;).
SFDC1-6944 Updating picklist values</description>
        <label>Loading Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DeliveryTeam__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisements</fullName>
                </value>
                <value>
                    <fullName>Agri Connect</fullName>
                </value>
                <value>
                    <fullName>AGRI SAM Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>BDW Germany</fullName>
                </value>
                <value>
                    <fullName>Bracknell</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>CD Distribution</fullName>
                </value>
                <value>
                    <fullName>Cengage Andover</fullName>
                </value>
                <value>
                    <fullName>Cengage Fairplay</fullName>
                </value>
                <value>
                    <fullName>Cengage KY</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>CI Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Community of Best Practices</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Delivery Technical</fullName>
                </value>
                <value>
                    <fullName>EMIS (Houston)</fullName>
                </value>
                <value>
                    <fullName>EMS (Gemalto)</fullName>
                </value>
                <value>
                    <fullName>Englewood Physical</fullName>
                </value>
                <value>
                    <fullName>Erights</fullName>
                </value>
                <value>
                    <fullName>Exclusive Analysis</fullName>
                </value>
                <value>
                    <fullName>Experts Portal</fullName>
                </value>
                <value>
                    <fullName>Fekete</fullName>
                </value>
                <value>
                    <fullName>GIS Delivery</fullName>
                </value>
                <value>
                    <fullName>Global Insight</fullName>
                </value>
                <value>
                    <fullName>Goldfire</fullName>
                </value>
                <value>
                    <fullName>GTA</fullName>
                </value>
                <value>
                    <fullName>International Energy</fullName>
                </value>
                <value>
                    <fullName>JOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoadingGroupNumber__c</fullName>
        <description>SFDC1-9354: Creating a field that holds loading group number to be used in Case Views</description>
        <formula>LoadingGroupOnboarding__r.LoadingGroupNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Loading Group Number</inlineHelpText>
        <label>Loading Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupOnboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7137: Creating lookup field for Implementation record type. Since there exists another field as Loading group, creating new field with same label, but different API</description>
        <label>Loading Group</label>
        <referenceTo>LoadingGroup__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LostReasonCode__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Lost Reason Code</inlineHelpText>
        <label>Lost Reason Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostReasonDescription__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Lost Reason Description</inlineHelpText>
        <label>Lost Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManualInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6148 : This field will hold the value of Is this a Manual Invoice
SFDC1-6250: Change field&apos;s name and API name per Bhanu&apos;s request</description>
        <label>Manual Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiyear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Multiyear</inlineHelpText>
        <label>Multiyear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIDTicket__c</fullName>
        <description>SFDC1-1351: Field to store service now ticket number
SFDC1-4998: Rename of field label OID Ticket # to INC Ticket</description>
        <inlineHelpText>Enter ServiceNow ticket number for the related Outage Incident (INC0123456)</inlineHelpText>
        <label>INC Ticket</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMCaseComments__c</fullName>
        <description>SFDC1-7122: Rename the &quot;OM Resolution Description&quot; field TO &quot;OM Case Comments&quot;</description>
        <inlineHelpText>Order Management Case Comments</inlineHelpText>
        <label>OM Case Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>